added documentation get by genre name route
