# swagger.json
@@ -14,7 +14,7 @@
           "200": {
             "description": "Retorna uma lista de filmes.",
             "content": {
-              "aplication/json": {
+              "application/json": {
                 "schema": {
                   "type": "array",
                   "items": {
@@ -45,7 +45,7 @@
         "requestBody": {
           "required": true,
           "content": {
-            "aplication/json": {
+            "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/MovieInput"
               }
@@ -87,6 +87,40 @@
           },
           "500": {
             "description": "Falha ao excluir o filme!"
+          }
+        }
+      }
+    },
+    "/movies/{genreName}": {
+      "get": {
+        "tags": ["Movie"],
+        "summary": "Filtrar filmes por gênero",
+        "parameters": [
+          {
+            "name": "genreName",
+            "in": "path",
+            "required": true,
+            "description": "Nome do gênero",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Movie"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Falha ao carregar os filmes pelo gênero!"
           }
         }
       }
